test/files/neg/macro-bundle-priority-nonbundle.check
macro-bundle-priority-nonbundle.scala:13: error: macro implementation has incompatible shape:
 required: (c: reflect.macros.whitebox.Context): c.Expr[Unit]
 or      : (c: reflect.macros.whitebox.Context): c.Tree
 found   : (c: reflect.macros.whitebox.Context)(x: c.Tree): Nothing
number of parameter sections differ
  def foo: Unit = macro Macros.impl
                               ^
one error found
